--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,13 +26,6 @@ body {
 
 body {
   font-family: 'Open Sans', sans-serif;
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
   margin-right: 0 !important;
 }
 
